# cognos

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml  setup.py
cognos/: __init__.py  divergence_semantics.py  orchestrator.py  reasoning_loop.py  strong_synthesis.py
cognos/core/: cognos_deep.py  cognos_integration_demo.py  confidence.py  divergence_semantics.py
docs/: COGNOS_MASTER_PROTOCOL_v1.2.md
examples/: basic_usage.py
experiments/: analyze_pareto.py  analyze_ue_distribution.py  debug_distribution.py  eval_hypothesis.py  test_cognos_comprehensive.py  test_cognos_v15.py  test_confidence.py  test_confidence_v15.py  test_low_escalation_matched.py  test_matched_escalation.py  test_method_comparison.py  test_real_data_text.py  test_real_data_uci.py  test_v1_vs_baseline.py
research/: COGNOS_RESEARCH_REPORT.md  ENVIRONMENT_SETUP.md  HYPOTHESIS.md  INSIGHTS.md  README.md  README.md.backup  TEST_PROJECT.md  experiment_runner.py  generate_report.py  llm_backend.py  metrics.py  requirements.txt  review_paper.py  run_exp_001_divergence.py  run_exp_002_epistemic_gain.py  run_exp_003_illposed.py  run_exp_005_aligned_vs_base.py  run_exp_006_logprob_confidence.py  run_experiment_001.py  setup_home_env.sh  setup_research_env.sh
research/exp_001_divergence/: config.yaml  metrics.json  raw_data.json  reflection.md
research/exp_001_divergence_kimi/: metrics.json  raw_data.json
research/exp_001_divergence_tinyllama/: metrics.json  (+1 more)
tests/: test_orchestrator.py  test_reasoning_loop.py  test_strong_synthesis.py  test_strong_synthesis_direct.py
(+30 files in other folders)
